--- a/index.html
+++ b/index.html
@@ -8,6 +8,28 @@
     <title>Restaurante EBAC</title>
 </head>
 <body>
+    <header class="navbar navbar-expand-lg sticky-top">
+        <div class="container">
+            <h1 class="navbar-brand">Nome do restaurante</h1>
+            <nav>
+                <ul class="nav nav-pills">
+                    <li class="nav-item">
+                        <a href="" class="nav-link active">Sobre o restaurante</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="" class="nav-link">Eventos</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="" class="nav-link">Nosso cardápio</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="" class="nav-link">Fale conosco</a>
+                    </li>
+                </ul>
+            </nav>
+
+        </div>
+    </header>
 
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
