--- a/index.html
+++ b/index.html
@@ -7,33 +7,60 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Pacifico&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="main.css">
 
     <title>Restaurante EBAC</title>
 </head>
 <body>
-    <header class="navbar navbar-expand-lg sticky-top">
+    <header class="navbar navbar-expand-lg sticky-top pt-4">
         <div class="container">
-            <h1 class="navbar-brand">Nome do restaurante</h1>
-            <nav>
-                <ul class="nav nav-pills">
-                    <li class="nav-item">
-                        <a href="" class="nav-link active">Sobre o restaurante</a>
+            <h1 class="navbar-brand m-0">Nome do restaurante</h1>
+            <button class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#menu-navegacao">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <nav class="navbar-collapse collapse justify-content-end" id="menu-navegacao">
+                <ul class="nav nav-pills d-block d-md-flex">
+                    <li class="nav-item fw-bold">
+                        <a href="" class="nav-link active">
+                            <i class="bi bi-house-door me-1"></i>
+                            Sobre o restaurante</a>
+                    </li>
+                    <li class="nav-item fw-bold">
+                        <a href="" class="nav-link">
+                            <i class="bi bi-calendar-check me-1"></i>
+                            Eventos</a>
                     </li>
                     <li class="nav-item">
-                        <a href="" class="nav-link">Eventos</a>
+                        <a href="" class="nav-link">
+                            <i class="bi bi-card-text me-1"></i>
+                            Nosso cardápio</a>
                     </li>
                     <li class="nav-item">
-                        <a href="" class="nav-link">Nosso cardápio</a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="" class="nav-link">Fale conosco</a>
+                        <a href="" class="nav-link">
+                            <i class="bi bi-chat-left-text me-1"></i>
+                            Fale conosco</a>
                     </li>
                 </ul>
             </nav>
 
         </div>
     </header>
+    <section id="sobre-o-restaurante">
+        <div class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-inner">
+                <div class="carousel-item active" data-bs-interval="3000">
+                    <img src="images/slides/slide1.png" alt="Foto interna do restaurante">
+                </div>
+                <div class="carousel-item" data-bs-interval="3000">
+                    <img src="images/slides/slide2.png" alt="Duas taças de vinho">
+                </div>
+                <div class="carousel-item" data-bs-interval="3000">
+                    <img src="images/slides/slide3.png" alt="Mesa com comida">
+                </div>
+            </div>
+        </div>
+    </section>
 
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
