--- a/index.html
+++ b/index.html
@@ -9,25 +9,24 @@
     <link href="https://fonts.googleapis.com/css2?family=Pacifico&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="main.css">
-
     <title>Restaurante EBAC</title>
 </head>
 <body>
-    <header class="navbar navbar-expand-lg sticky-top pt-4">
+    <header class="navbar navbar-expand-lg sticky-top pt-4" id="cabecalho">
         <div class="container">
-            <h1 class="navbar-brand m-0">Nome do restaurante</h1>
+            <h1 class="navbar-brand m-0 sectiont-title">Nome do restaurante</h1>
             <button class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#menu-navegacao">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <nav class="navbar-collapse collapse justify-content-end" id="menu-navegacao">
                 <ul class="nav nav-pills d-block d-md-flex">
                     <li class="nav-item fw-bold">
-                        <a href="" class="nav-link active">
+                        <a href="#sobre-o-restaurante" class="nav-link">
                             <i class="bi bi-house-door me-1"></i>
                             Sobre o restaurante</a>
                     </li>
                     <li class="nav-item fw-bold">
-                        <a href="" class="nav-link">
+                        <a href="#eventos" class="nav-link">
                             <i class="bi bi-calendar-check me-1"></i>
                             Eventos</a>
                     </li>
@@ -43,26 +42,94 @@
                     </li>
                 </ul>
             </nav>
-
         </div>
     </header>
-    <section id="sobre-o-restaurante">
-        <div class="carousel slide" data-bs-ride="carousel">
-            <div class="carousel-inner">
-                <div class="carousel-item active" data-bs-interval="3000">
-                    <img src="images/slides/slide1.png" alt="Foto interna do restaurante">
+    <div data-bs-spy="scroll" data-bs-target="cabecalho">
+        <section id="sobre-o-restaurante">
+            <div class="carousel slide" data-bs-ride="carousel" id="carousel">
+                <div class="carousel-inner">
+                    <div class="carousel-item active" data-bs-interval="3000">
+                        <img src="images/slides/slide1.png" alt="Foto interna do restaurante">
+                    </div>
+                    <div class="carousel-item" data-bs-interval="3000">
+                        <img src="images/slides/slide2.png" alt="Duas taças de vinho">
+                    </div>
+                    <div class="carousel-item" data-bs-interval="3000">
+                        <img src="images/slides/slide3.png" alt="Mesa com comida">
+                    </div>
                 </div>
-                <div class="carousel-item" data-bs-interval="3000">
-                    <img src="images/slides/slide2.png" alt="Duas taças de vinho">
-                </div>
-                <div class="carousel-item" data-bs-interval="3000">
-                    <img src="images/slides/slide3.png" alt="Mesa com comida">
+                <button class="carousel-control-prev" type="button" data-bs-target="#carousel" data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon"></span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carousel" data-bs-slide="next">
+                    <span class="carousel-control-next-icon"></span>
+                </button>
+                <div class="carousel-indicators">
+                    <button type="button" data-bs-target="#carousel" class="active" data-bs-slide-to="0"></button>
+                    <button type="button" data-bs-target="#carousel" data-bs-slide-to="1"></button>
+                    <button type="button" data-bs-target="#carousel" data-bs-slide-to="2"></button>
+                </div> 
+            </div>
+            <div class="pt-5 pb-5">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-md-5">
+                        <img src="./images/restaurante.jpg" class="d-block w-100 rounded" alt="Foto do espaço interno do restaurante">
+                        </div>
+                        <div class="col-md-7">
+                        <h2 class="sectiont-title">Sobre <span class="text-colored">o restaurante</span></h2>
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Commodi illo aspernatur, placeat earum animi consequatur distinctio officiis dicta et dolorem ullam, ducimus sit voluptatem facilis laborum necessitatibus nisi a officia!</p>
+                        <h3 class="sectiont-title">Sobre <span class="text-colored">o espaço</span></h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore reiciendis voluptate, consectetur veniam odit iste enim perspiciatis corrupti ad delectus. Quisquam quam distinctio recusandae quae dolor vitae, commodi tempore accusamus.
+                        </p>
+                        <ul>
+                            <li>
+                                item 1
+                            </li>
+                            <li>
+                                item 2
+                            </li>
+                            <li>
+                                item 3
+                            </li>
+                        </ul>
+                  </div>
                 </div>
             </div>
-        </div>
-    </section>
-
+            </div>
+        </section>
+        <section id="eventos" class="pt-5 pb-5">
+            <div class="container">
+                <div class="row">
+                    <h2 class="sectiont-title text-center">Para todas <span class="text-colored">as ocasiões</span></h2>
+                </div>
+                <div class="row mt-4">
+                    <div class="col-md-4">
+                        <img src="./images/eventos/aniversario.jpg " class="d-block w-100 rounded mb-2" alt="">
+                        <h3 class="sectiont-title text-colored fs-4">
+                            <i class="bi bi-calendar-heart-fill"></i>
+                            Aniversários</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex officia excepturi ullam repellendus debitis omnis maiores voluptatem at a? Qui ea nobis reiciendis nulla itaque natus nesciunt necessitatibus et non!</p>
+                    </div>
+                    <div class="col-md-4">
+                        <img src="./images/eventos/casamento.jpg" class="d-block w-100 rounded mb-2" alt="">
+                        <h3 class="sectiont-title text-colored fs-4">
+                            <i class="bi bi-arrow-through-heart-fill"></i>
+                            Recepção para casamentos</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex officia excepturi ullam repellendus debitis omnis maiores voluptatem at a? Qui ea nobis reiciendis nulla itaque natus nesciunt necessitatibus et non!</p>
+                    </div>
+                    <div class="col-md-4">
+                        <img src="./images/eventos/confraternizacoes.jpg" class="d-block w-100 rounded mb-2" alt="">
+                        <h3 class="sectiont-title text-colored fs-4">
+                            <i class="bi bi-people-fill"></i>
+                            Confraternizações</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex officia excepturi ullam repellendus debitis omnis maiores voluptatem at a? Qui ea nobis reiciendis nulla itaque natus nesciunt necessitatibus et non!</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </div>
     
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
