--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="./lib/bootstrap.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Pacifico&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
@@ -27,7 +27,8 @@
                     </li>
                     <li class="nav-item fw-bold">
                         <a href="#eventos" class="nav-link">
-                            <i class="bi bi-calendar-check me-1"></i>
+                            <i class="bi bi-calendar-check me-1">
+                            </i>
                             Eventos</a>
                     </li>
                     <li class="nav-item fw-bold">
@@ -36,7 +37,7 @@
                             Nosso cardápio</a>
                     </li>
                     <li class="nav-item fw-bold">
-                        <a href="" class="nav-link">
+                        <a href="#fale-conosco" class="nav-link">
                             <i class="bi bi-chat-left-text me-1"></i>
                             Fale conosco</a>
                     </li>
@@ -44,7 +45,7 @@
             </nav>
         </div>
     </header>
-    <div data-bs-spy="scroll" data-bs-target="cabecalho">
+    <div data-bs-spy="scroll" data-bs-target="cabecalho" data-bs-smooth-scrool="true">
         <section id="sobre-o-restaurante">
             <div class="carousel slide" data-bs-ride="carousel" id="carousel">
                 <div class="carousel-inner">
@@ -76,7 +77,7 @@
                         <div class="col-md-5">
                         <img src="./images/restaurante.jpg" class="d-block w-100 rounded" alt="Foto do espaço interno do restaurante">
                         </div>
-                        <div class="col-md-7">
+                        <div class="col-md-7 mt-3 mt-md-0">
                         <h2 class="sectiont-title">Sobre <span class="text-colored">o restaurante</span></h2>
                         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Commodi illo aspernatur, placeat earum animi consequatur distinctio officiis dicta et dolorem ullam, ducimus sit voluptatem facilis laborum necessitatibus nisi a officia!</p>
                         <h3 class="sectiont-title">Sobre <span class="text-colored">o espaço</span></h3>
@@ -320,7 +321,76 @@
                 </div>
             </div>
         </section>
-    </div>   
-     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+        <section id="fale-conosco" class="pt-5 pb-5">
+            <div class="container">
+                <div class="row">
+                    <h2 class="sectiont-title text-center"> Fale <span class="text-colored">conosco</span></h2>
+                </div>
+                <div class="row">
+                    <div class="col-md-7 mb-5">
+                        <form>
+                            <div class="mb-3">
+                                <label for="nome" class="form-label fw-bold text-colored">Seu nome</label>
+                                <input type="text" id="nome" class="form-control" required>
+                            </div>
+                            <div class="mb-3">
+                                <label for="email" class="form-label fw-bold text-colored">Seu email</label>
+                                <input type="email" id="email" class="form-control"  required>
+                            </div>
+                            <div class="mb-3">
+                                <label for="telefone" class="form-label fw-bold text-colored">Seu telefone (opcional)</label>
+                                <input type="tel" id="telefone" class="form-control">
+                            </div>
+                            <div class="mb-3">
+                                <label for="mensagem" class="form-label fw-bold text-colored">Sua mensagem</label>
+                                <textarea id="mensagem" class="form-control"  required ></textarea>
+                            </div>
+                            <button type="submit" class="btn fw-bold">Enviar</button>
+                        </form>
+                    </div>
+                    <div class="col-md-5">
+                        <div class="row">
+                            <h3 class="sectiont-title text-colored fs-4">
+                                <i class="bi bi-hand-thumbs-up-fill"></i>
+                                Redes Sociais</h3>
+                            <ul class="social-links">
+                                <li class="fs-5">
+                                    <a href="https://www.facebook.com/" target="_blank">
+                                        <i class="bi bi-facebook text-colored"></i>
+                                    </a>                                   
+                                </li>
+                                <li class="fs-5 ms-1 me-1">
+                                    <a href="https://www.instagram.com/" target="_blank">
+                                        <i class="bi bi-instagram text-colored"></i>
+                                    </a>                                   
+                                </li>
+                                <li class="fs-5">
+                                    <a href="https://www.whatsapp.com/?lang=pt_br" target="_blank">
+                                        <i class="bi bi-whatsapp text-colored"></i>
+                                    </a>                                   
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="row mt-4">
+                            <h3 class="sectiont-title text-colored fs-4">
+                                <i class="bi bi-cursor-fill"></i>
+                                Endereço</h3>
+                            <p>Rua Teste Nº 25, Bairro Bootstrap - São Paulo - SP</p>
+                        </div>
+                    </div>
+                </div>   
+            </div>
+        </section>
+    </div>  
+    <script src="./lib/bootstrap.bundle.min.js"></script>
+    <script src="./lib/jquery.mask.min.js"></script> 
+    
+      <script>
+    $(document).ready(function(){
+            $('#telefone').mask('(00) 00000-0000')
+        })
+    </script>
+    
+
 </body>
 </html>
